<resources>
    <string name="app_name">CloudConnector</string>
    <string name="toggle_cloud_button">Toggle %1$s</string>
    <string name="pref_title_aws" translatable="false">AWS</string>
    <string name="pref_title_pelion" translatable="false">Pelion</string>
    <string name="pref_title_aliyun">Aliyun</string>[
    <string name="pref_title_aliyun_product_key">Aliyun Product Key</string>
    <string name="pref_title_aliyun_device_name">Aliyun Device Name</string>
    <string name="pref_title_aliyun_device_secret">Aliyun Device Secret</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_aliyun_topic_get">Aliyun MQTT Topic for Subscribe</string>
    <string name="pref_title_aliyun_topic_data">Aliyun MQTT Topic for Push</string>
</resources>
